# cabin_booking_backend/urls.py
@@ -17,10 +17,11 @@ Including another URLconf
 from django.contrib import admin
 from django.urls import path
 
-from cabin_booking.views import get_login_interactor_view, get_signup_interactor_view
+from cabin_booking.views import get_login_interactor_view, get_signup_interactor_view, get_user_profile_api_view
 
 urlpatterns = [
     path('admin/', admin.site.urls),
     path('user_account/login/v1/', get_login_interactor_view),
-    path('user_account/signup/v1', get_signup_interactor_view)
+    path('user_account/signup/v1', get_signup_interactor_view),
+    path('user/profile/v1',get_user_profile_api_view)
 ]
